Day3/wordpress/wordpress-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
spec:
  port:
    targetPort: wordpress
  to:
    kind: "Service"
    name: wordpress
    weight: null
status: {}
